# spl-practice

./: .gitignore  .pnp.cjs  Anchor.toml  PROJECT_SUMMARY.md  README.md  package.json
frontend/: package-lock.json  package.json
frontend/public/: spl_practice.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/billing/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/token-setup/: page.tsx
frontend/src/app/token-setup-new/: page.tsx
frontend/src/components/: app-container.tsx  app-sidebar.tsx  chart-area-interactive.tsx  client-wallet-wrapper.tsx  console-viewer.tsx  data-table.tsx  devnet-guide.tsx  idl-debugger.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  redirect-examples.tsx  section-cards.tsx  site-header.tsx  wallet-connection.tsx  wallet-context-provider.tsx
frontend/src/components/ui/: chart.tsx
frontend/src/hooks/: use-solana.ts
frontend/src/lib/: idl-legacy.ts  idl.ts  solana-config.ts
frontend/src/styles/: wallet-adapter.css
programs/spl-practice/: CODE_STRUCTURE.md  Cargo.toml
programs/spl-practice/src/: account_structs.rs  error_types.rs  instruction_handlers.rs  lib.rs  state_types.rs
tests/: TEST_DOCUMENTATION.md  spl-practice-basic.ts  spl-practice-comprehensive.ts  spl-practice.ts
